<resources>
    <string name="app_name">BeatsOn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">BeatsOn</string>
    <string name="band_page">Band Name</string>
    <string name="player_screen">Player Screen</string>
    <string name="artist_page">Artist Name</string>
    <string name="label_latest_track">Latest Tracks</string>
    <string name="label_top_bands">Top Bands</string>
    <string name="label_top_artists">Top Artists</string>
    <string name="label_recent_viewed">Recently  Viewed</string>
    <string name="company_name">Beatson</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_fpwd">Forgot Password?</string>
    <string name="label_fb_login">Login with Facebook</string>
    <string name="label_gmail_login">Login with Gmail</string>
    <string name="label_signup">I don\'t have an Account? Signup</string>
    <string name="most_popular_tracks">Most Popular Tracks</string>
    <string name="newest_band_tracks">Newest</string>
    <string name="all_tracks">All Tracks</string>
    <string name="band_of_artist">Band of this Artist</string>
</resources>
