<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hotpepper.beatzon.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/font_extra_huge_header"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/company_name"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:hint="@string/hint_email"
        android:layout_height="60dp" />


    <EditText
        android:id="@+id/ed_password"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:hint="@string/hint_password"
        android:layout_height="60dp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/font_large"
        android:background="@drawable/green_button_rounded"
        android:text="@string/label_login"/>


    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_forgotpwd"
        android:layout_gravity="center"
        android:textSize="@dimen/font_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/label_fpwd"/>


    <Button
        android:id="@+id/btn_fb"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        android:textSize="@dimen/font_large"
        android:background="@drawable/fb_blue_button_rounded"
        android:text="@string/label_fb_login"/>
    <Button
        android:id="@+id/btn_gmail"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin_double"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/font_large"
        android:background="@drawable/gmail_button_rounded"
        android:text="@string/label_gmail_login"/>


    <TextView
        android:gravity="bottom"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signup"
        android:text="@string/label_signup"/>
</LinearLayout>
